<resources>
    <string name="app_name">Nexus Lexic4</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_hint">User Name</string>
    <string name="password_hint">Password</string>
    <string name="exit">Exit</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="speaking_pals">Speaking Pals/Chats</string>
    <string name="student_report_cards">Student Report Cards</string>
    <string name="grades">Grades</string>
    <string name="extra_practice">Extra Practice</string>
    <string name="group_work">Group Work</string>
    <string name="resources">Resources</string>
    <string name="chats">Chats</string>
    <string name="student_groups">Student Groups</string>
    <string name="homework">Homework</string>
    <string name="rewards">Rewards</string>
    <string name="students">Students</string>
    <string name="achievement">Achievements</string>
    <string name="store">Store</string>
    <string name="hi">hi</string>
</resources>
