<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ayush.nexuslexic4.StudentActivity">

    <ImageView
        android:layout_width="175dp"
        android:layout_height="150dp"
        android:src="@drawable/silhouette"
        android:id="@+id/silhouette"
        />
    <Button
        android:layout_width="175dp"
        android:layout_height="90dp"
        android:background="@color/green"
        android:text="@string/homework"
        android:id="@+id/homework"
        android:layout_below="@+id/silhouette"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="175dp"
        android:layout_height="90dp"
        android:background="@color/orange"
        android:text="@string/speaking_pals"
        android:id="@+id/speaking_pals_chat"
        android:layout_below="@+id/homework"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"/>
    <Button
        android:layout_width="175dp"
        android:layout_height="90dp"
        android:background="@color/darkblue"
        android:text="@string/achievement"
        android:id="@+id/achievements"
        android:layout_below="@+id/speaking_pals_chat"
        android:layout_marginTop="20dp"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:background="@color/blue"
        android:text="@string/grades"
        android:id="@+id/grades"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:background="@color/red"
        android:text="@string/extra_practice"
        android:id="@+id/extra_practice"
        android:layout_below="@+id/grades"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:background="@color/purple"
        android:text="@string/group_work"
        android:id="@+id/group_work"
        android:layout_below="@+id/extra_practice"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:background="@color/darkgreen"
        android:text="@string/resources"
        android:id="@+id/resources"
        android:layout_below="@+id/group_work"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:background="@color/darkred"
        android:text="@string/store"
        android:id="@+id/store"
        android:layout_below="@+id/resources"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"/>



</RelativeLayout>
