<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ayush.nexuslexic4.TeacherActivity">


    <ImageView
        android:layout_width="175dp"
        android:layout_height="150dp"
        android:src="@drawable/silhouette"
        android:id="@+id/silhouette" />

    <Button
        android:layout_width="175dp"
        android:layout_height="90dp"
        android:background="@color/orange"
        android:text="@string/students"
        android:id="@+id/students"
        android:layout_below="@+id/silhouette"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="175dp"
        android:layout_height="90dp"
        android:background="@color/green"
        android:text="@string/homework"
        android:id="@+id/homework"
        android:layout_below="@+id/students"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="175dp"
        android:layout_height="90dp"
        android:background="@color/darkblue"
        android:text="@string/chats"
        android:id="@+id/chats"
        android:layout_below="@+id/homework"
        android:layout_marginTop="20dp"/>


    <Button
        android:layout_width="150dp"
        android:layout_height="125dp"
        android:background="@color/blue"
        android:text="@string/grades"
        android:id="@+id/grades"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="125dp"
        android:background="@color/purple"
        android:text="@string/student_report_cards"
        android:id="@+id/student_report_cards"
        android:layout_below="@+id/grades"
        android:layout_marginTop="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="125dp"
        android:background="@color/red"
        android:text="@string/student_groups"
        android:id="@+id/student_groups"
        android:layout_below="@+id/student_report_cards"
        android:layout_marginTop="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>



</RelativeLayout>
